# ApplicationCore-MicroDAQ-Tools

./: CMakeLists.txt  README.md
example/: plot.C
include/: DataHandler.h  FileHandler.h  LinkDef.h  TypeDefinitions.h  data_types.h
scripts/: convert2npz.py  deleteBranch.C  hdf5Converter.C  skimRootFile.C
src/: DataHandler.cpp  FileHandler.cpp
test/: testReading.C
viewer/: MicroDAQviewer.py  UAClient.py
viewer/chimeratk_daq/: DataSelectorUI.py  DataSelectorUI.ui  HDF5Viewer.py  HDF5Worker.py  MicroDAQviewerUI.py  MicroDAQviewerUI.ui  MicroDAQviewerUI_live.py  MicroDAQviewerUI_live.ui  RootViewer.py  RootWorker.py  RootWorker.py.in  TimeXAxis.py  __init__.py
